examples/test/testpolicy11376.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11376
  namespace: namespace429
spec:
  podSelector:
    matchLabels:
      key40: value20
      key26: value13
      key17: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value8
          key24: value13
          key1: value22
      podSelector:
        matchLabels:
          key37: value42
